Fix tabs wrapping

--- a/admin/assets/scss/components/_tabs.scss
+++ b/admin/assets/scss/components/_tabs.scss
@@ -1,11 +1,12 @@
 .tabs {
+    overflow-x: auto;
     margin-bottom: 1rem;
     border-bottom: 1px solid $color-gray-light;
+    white-space: nowrap;
 }
 
 .tabs-tab {
     display: inline-block;
-    margin-bottom: -1px;
     padding: 0.5rem 1.25rem;
     color: #000;
     cursor: pointer;
